[tool.poetry]
name = "docker_bump"
version = "0.1.0"
description = ""
authors = ["Michael Place <mike.place@elastic.co>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.4"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
