[tool.poetry]
name = "docker_bump"
version = "0.1.0"
description = ""
authors = ["Michael Place <mike.place@elastic.co>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.4"
requests = "^2.28.1"
shelved-cache = "^0.2.1"
junit-xml = "^1.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
elasticsearch = "^8.3.3"
timeout-decorator = "^0.5.0"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
